[package]
name = "bevy_irc"
version = "0.2.0"
edition = "2021"

[features]
default = []
tls-native = ["irc/tls-native"]
tls-rust = ["irc/tls-rust"]
twitch = ["thiserror"]

[dependencies]
async-compat = "0.2"
bevy_app = "0.14"
bevy_ecs = "0.14"
bevy_time = "0.14"
bevy_utils = "0.14"
futures-util = { version = "0.3", default-features = false }
irc = { version = "1.0", default-features = false }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
bevy_log = "0.14"

[[example]]
name = "twitch"
required-features = ["twitch"]
